site de caminhões

--- a/x2/index.html
+++ b/x2/index.html
@@ -41,7 +41,7 @@
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur quod aliquid commodi corrupti sit nemo nesciunt itaque alias ad perferendis ducimus placeat totam quia omnis eius, consequatur minus quas eaque. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta consequatur provident quibusdam totam facere dolorem tempora facilis culpa maiores! Sapiente, reiciendis voluptas! Eligendi quibusdam voluptatem praesentium sequi a magni quos!
                 </p>
             </aside>
-            <a href="#"><button>VEJA MAIS</button></a>
+            <a href="#"><button class="veja_mais">VEJA MAIS</button></a>
             <article class="at1">
                 <h2>
                     Produtos
@@ -50,7 +50,9 @@
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa corrupti eius reiciendis laborum? Aliquid magni maiores tempore cupiditate praesentium eaque, itaque, non quibusdam veniam quaerat aliquam? Excepturi minima maxime esse.
                 </p>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur quod aliquid commodi corrupti sit nemo nesciunt itaque alias ad perferendis ducimus placeat totam quia omnis eius, consequatur minus quas eaque. Lorem ipsum dolor sit, amet consectetur adipisicing elit
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur quod aliquid commodi corrupti sit nemo nesciunt itaque alias ad perferendis ducimus placeat totam quia omnis eius, consequatur minus quas eaque. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                </p>
+                <a href="#"><button class="botao2">veja mais</button></a>
             </article>
             <article class="at2">
                 <h2>Serviços</h2>
