site de caminhoes

--- a/x2/index.html
+++ b/x2/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <section class="se1">
-            <img src="imagens/baner-principal.jpg" alt="Tela inicial">
+            <img style="width: 1349px;" src="imagens/baner-principal.jpg" alt="Tela inicial">
             <aside>
                 <h1>
                     A companhia de transportes mas completa do país, especialista em todo tipo de cargas.
@@ -67,7 +67,7 @@
             </article>
         </section>
         <section class="se3">
-            <img src="imagens/b2.png" alt="Conclusões">
+            <img style="width: 1349px;" src="imagens/b2.png" alt="Conclusões">
             <aside>
                 <h2>
                     Nossos caminhões são preparados especificamente para a necessidade do seu serviço !
